Improved multilingual version. Added cookies for language control. Script improvement and additional_content translation remain to be done

--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -287,7 +287,7 @@
 @en                        <span itemprop="alumniOf">Technical University of Madrid (UPM)</span>, so you may consider me a
 @en                        <span itemprop="hasOccupation">data science student</span>.
 @es                        Soy <span itemprop="givenName">Marcos</span> <span itemprop="familyName">Bernal España</span>.
-@es                        Irónicamente, debido a mi apellido, podrías suponer que has dado con otro 'loco' <span itemprop="nationality">español</span>...
+@es                        Irónicamente, debido a mi apellido, podrías suponer que has dado con otro <span itemprop="nationality">español</span> 'loco'...
 @es                        bueno, tampoco estarías muy desencaminado siendo honestos. Algunos compañeros dirían que estoy acabando el master 2 en ciencia de datos
 @es                        en la <span itemprop="alumniOf">Universidad Politécnica de Madrid (UPM)</span>, así que quizás me podrías considerar un
 @es                        <span itemprop="hasOccupation">estudiante de ciencia de datos</span>.
@@ -298,8 +298,8 @@
 @en                        security, networking, data mining and machine learning. I like to learn something useful every day and I do my best to achieve it.
 @es                        Mis intereses son numerosos y principalmente relacionados, aunque no limitados, a <span itemprop="seeks">ingeniería informática y</span>
 @es                        , por extensión, <span itemprop="seeks">ciencia de datos</span>. También me gusta la robótica, el desarrollo de software (incluyendo el
-@es                        videojuegos :P), seguridad, redesm minería de datos y aprendizaje automático. Me gusta aprender algo nuevo y útil cada dia y
-@es                        pongo mi empeño para conseguirlo.
+@es                        videojuegos :P), seguridad, redesm minería de datos y aprendizaje automático. Me gusta aprender algo nuevo y útil cada día y
+@es                        pongo todo mi empeño para conseguirlo.
                     </p>
 
                    <img id="about_in_hockey" src="imgs/in_hockey.jpg" alt="Marcos in the Field Hockey pitch of Madrid Federation"/>
@@ -400,6 +400,20 @@
 @en *Hi Marcos, ...
 @es *Hola Marcos, ...
                  "></textarea>
+                 <div class="msg_conf_text">
+                   <p>
+@en                   Thank you,
+@es                   Gracias,
+                     <div id="firstname"></div><br /><br />
+@en                   I will reply you in less than 48 hours. <br /> Nevertheless, if you need urgent contact, please use
+@es                   Tendras tu respuesta en unas 48 horas. <br /> Sin embargo, si necesitas un contacto urgente, contact conmigo a traves de
+                     <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-hover-opacity">
+                       linked<i class="fa fa-linkedin"></i>
+                     </a> <br /><br />
+@en                   Regards, <br /> Marcos <br />
+@es                   Saludos, <br /> Marcos <br />
+                   </p>
+               </div>
               </div>
               <button class="w3-button w3-block w3-section waiting_mess w3-padding" id="message_button"><i class="fa fa-paper-plane"></i>
 @en                Send Message!
