--- a/index.html
+++ b/index.html
@@ -359,6 +359,17 @@
                  <textarea class="mandatory_form" name="message" rows="10" cols="30" style="width: 100%;" placeholder="
 *Hi Marcos, ...
                  "></textarea>
+                 <div class="msg_conf_text">
+                   <p>
+                  Thank you,
+                     <div id="firstname"></div><br /><br />
+                  I will reply you in less than 48 hours. <br /> Nevertheless, if you need urgent contact, please use
+                     <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-hover-opacity">
+                       linked<i class="fa fa-linkedin"></i>
+                     </a> <br /><br />
+                  Regards, <br /> Marcos <br />
+                   </p>
+               </div>
               </div>
               <button class="w3-button w3-block w3-section waiting_mess w3-padding" id="message_button"><i class="fa fa-paper-plane"></i>
                Send Message!
