--- a/index.es.html
+++ b/index.es.html
@@ -125,7 +125,7 @@
                     <h5>
                      Soy Marcos Bernal, un estudiante de ingeniería informática.
                             <br />
-                       Desarrollando y creando nuevas ideas y proyectos!
+                       ¡Desarrollando y creando nuevas ideas y proyectos!
                     </h5>
                 </div>
             </div>
@@ -262,7 +262,7 @@
                   <img id="about_in_hce" src="imgs/working_in_success_cases_hce.jpg" alt="Marcos in the HCE in Berlin"/>
                    <p id="about_text1">
                        Soy <span itemprop="givenName">Marcos</span> <span itemprop="familyName">Bernal España</span>.
-                       Irónicamente, debido a mi apellido, podrías suponer que has dado con otro 'loco' <span itemprop="nationality">español</span>...
+                       Irónicamente, debido a mi apellido, podrías suponer que has dado con otro <span itemprop="nationality">español</span> 'loco'...
                        bueno, tampoco estarías muy desencaminado siendo honestos. Algunos compañeros dirían que estoy acabando el master 2 en ciencia de datos
                        en la <span itemprop="alumniOf">Universidad Politécnica de Madrid (UPM)</span>, así que quizás me podrías considerar un
                        <span itemprop="hasOccupation">estudiante de ciencia de datos</span>.
@@ -270,8 +270,8 @@
                     <p id="about_text2">
                        Mis intereses son numerosos y principalmente relacionados, aunque no limitados, a <span itemprop="seeks">ingeniería informática y</span>
                        , por extensión, <span itemprop="seeks">ciencia de datos</span>. También me gusta la robótica, el desarrollo de software (incluyendo el
-                       videojuegos :P), seguridad, redesm minería de datos y aprendizaje automático. Me gusta aprender algo nuevo y útil cada dia y
-                       pongo mi empeño para conseguirlo.
+                       videojuegos :P), seguridad, redesm minería de datos y aprendizaje automático. Me gusta aprender algo nuevo y útil cada día y
+                       pongo todo mi empeño para conseguirlo.
                     </p>
 
                    <img id="about_in_hockey" src="imgs/in_hockey.jpg" alt="Marcos in the Field Hockey pitch of Madrid Federation"/>
@@ -361,6 +361,17 @@
                  <textarea class="mandatory_form" name="message" rows="10" cols="30" style="width: 100%;" placeholder="
 *Hola Marcos, ...
                  "></textarea>
+                 <div class="msg_conf_text">
+                   <p>
+                  Gracias,
+                     <div id="firstname"></div><br /><br />
+                  Tendras tu respuesta en unas 48 horas. <br /> Sin embargo, si necesitas un contacto urgente, contact conmigo a traves de
+                     <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-hover-opacity">
+                       linked<i class="fa fa-linkedin"></i>
+                     </a> <br /><br />
+                  Saludos, <br /> Marcos <br />
+                   </p>
+               </div>
               </div>
               <button class="w3-button w3-block w3-section waiting_mess w3-padding" id="message_button"><i class="fa fa-paper-plane"></i>
                Enviar Mensaje!
