Improved connection management and feedback in contact form

--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -416,8 +416,26 @@
                </div>
               </div>
               <button class="w3-button w3-block w3-section waiting_mess w3-padding" id="message_button"><i class="fa fa-paper-plane"></i>
-@en                Send Message!
-@es                Enviar Mensaje!
+                <span class="msg_btn_text connected_text">
+@en                Send Message
+@es                Enviar Mensaje
+                </span>
+                <span class="msg_btn_text waiting_text">
+@en                Please, wait a moment. Connecting...
+@es                Por favor, espere un momento. Conectando...
+                </span>
+                <span class="msg_btn_text error_text">
+@en                Not available. Please try again later!
+@es                No disponible. Por favor, ¡inténtalo de nuevo más tarde!
+                </span>
+                <span class="msg_btn_text check_text">
+@en                Please, review the wrong fields!
+@es                Por favor, ¡revisa los campos erróneos!
+                </span>
+                <span class="msg_btn_text confirmation_text">
+@en                Message was properly sent!!
+@es                ¡¡El mensage fue enviado correctamente!!
+                </span>
               </button>
             </form>
 
