--- a/index.es.html
+++ b/index.es.html
@@ -374,7 +374,21 @@
                </div>
               </div>
               <button class="w3-button w3-block w3-section waiting_mess w3-padding" id="message_button"><i class="fa fa-paper-plane"></i>
-               Enviar Mensaje!
+                <span class="msg_btn_text connected_text">
+               Enviar Mensaje
+                </span>
+                <span class="msg_btn_text waiting_text">
+               Por favor, espere un momento. Conectando...
+                </span>
+                <span class="msg_btn_text error_text">
+               No disponible. Por favor, ¡inténtalo de nuevo más tarde!
+                </span>
+                <span class="msg_btn_text check_text">
+               Por favor, ¡revisa los campos erróneos!
+                </span>
+                <span class="msg_btn_text confirmation_text">
+               ¡¡El mensage fue enviado correctamente!!
+                </span>
               </button>
             </form>
 
