--- a/index.html
+++ b/index.html
@@ -372,7 +372,21 @@
                </div>
               </div>
               <button class="w3-button w3-block w3-section waiting_mess w3-padding" id="message_button"><i class="fa fa-paper-plane"></i>
-               Send Message!
+                <span class="msg_btn_text connected_text">
+               Send Message
+                </span>
+                <span class="msg_btn_text waiting_text">
+               Please, wait a moment. Connecting...
+                </span>
+                <span class="msg_btn_text error_text">
+               Not available. Please try again later!
+                </span>
+                <span class="msg_btn_text check_text">
+               Please, review the wrong fields!
+                </span>
+                <span class="msg_btn_text confirmation_text">
+               Message was properly sent!!
+                </span>
               </button>
             </form>
 
