--- a/index.es.html
+++ b/index.es.html
@@ -51,7 +51,7 @@
     <!-- If javascript is not enabled, warning the user -->
     <noscript>
       <style>
-         #right_graph, #divider, .showing_button, #message_button, #aboutme_carousel {display: none;}
+         #right_graph, #divider, .showing_button, #message_button, #aboutme_carousel, #CookieWarning {display: none;}
       </style>
     </noscript>
 
@@ -113,6 +113,17 @@
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 ++++++++++++++++++++++ Pages (Content) +++++++++++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+<div id="CookieWarning">
+  <div class="w3-row">
+    <span>
+ Navegando esta página web aceptas un uso y almacenaminto justo de Cookies
+    </span>
+    <button class="w3-button w3-black">
+Acepto
+    </button>
+  </div>
+</div>
+
 
 <!--+++++++++++++ Welcome ++++++++++++++++++++++++++++-->
     <div class="w3-container w3-padding-64" id="Welcome">
@@ -129,6 +140,9 @@
                     </h5>
                 </div>
             </div>
+        </div>
+        <div id="version_overview">
+
         </div>
     </div>
 
