Improved language change and added to responsive bar (small-mobile size)

--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -93,29 +93,31 @@
         <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
         <a href="https://github.com/MarcosBernal" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-github w3-hover-opacity"></i></a>
         <div class="w3-bar-item w3-right w3-hide-small" style="cursor:default">|</div>
-        <div class="w3-bar-item w3-button w3-hide-small w3-right lang" id="spanish_lang"><i class="fa"><img src="imgs/flag-of-spain.jpg" alt="Spanish language - flag of spain"></i></div>
-        <i class="w3-bar-item w3-button w3-hide-small w3-right lang" id="english_lang"><img src="imgs/flag-of-english.jpg" alt="English language - flag of UK/US"></i>
+        <i class="w3-bar-item w3-button w3-hide-small w3-right lang spanish_lang"><img src="imgs/flag-of-spain.jpg" alt="Spanish language - flag of spain"></i>
+        <i class="w3-bar-item w3-button w3-hide-small w3-right lang english_lang"><img src="imgs/flag-of-english.jpg" alt="English language - flag of UK/US"></i>
     </div>
 
     <div class="responsive_menu hidden">
         <button class="dropdown_button"></button>
         <div id="myDropdownNav" class="dropdown_button-content">
-            <a href="#nav_menu">
+            <a href="#nav_menu"><i class="fa fa-home"></i>
 @en          Welcome
 @es          Bienvenido
             </a>
-            <a href="#Experience">
+            <a href="#Experience"><i class="fa fa-th"></i>
 @en          Experience
 @es          Experiencia
             </a>
-            <a href="#AboutMe">
+            <a href="#AboutMe"><i class="fa fa-user"></i>
 @en              About me
 @es              Sobre mi
             </a>
-            <a href="#Contact">
+            <a href="#Contact"><i class="fa fa-envelope"></i>
 @en           Contact
 @es           Contacto
             </a>
+@en         <a class="lang spanish_lang"><i class="fa fa-language"></i> Español </a>
+@es         <a class="lang english_lang"><i class="fa fa-language"></i> English </a>
         </div>
     </div>
 </div>
